# tokenmeter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: cli.md  energy-tracking.md  providers.md  storage.md  tui.md
docs/references/: energy-tracking.md  tui.md
docs/specs/: energy-tracking.md  tui.md
src/tokenmeter/: __init__.py  _types.py  advisor.py  budget.py  cli.py  config.py  tracker.py
src/tokenmeter/energy/: __init__.py  _data.py  calculator.py
src/tokenmeter/providers/: anthropic.py  openai.py
src/tokenmeter/storage/: json_file.py  sqlite.py
src/tokenmeter/tui/: __init__.py  app.py  tokenmeter.tcss
src/tokenmeter/tui/screens/: __init__.py  advisor.py  budget.py  charts.py  history.py  summary.py
src/tokenmeter/tui/widgets/: __init__.py  budget_gauge.py  spark_chart.py
tests/: test_advisor.py  test_config.py  test_energy.py
tests/test_storage/: test_json_file.py  test_sqlite.py
tests/test_tui/: test_advisor_screen.py  test_app.py  test_budget_screen.py  test_history_screen.py
