[project]
name = "smalldreamcollective-tokenmeter"
version = "0.1.1"
description = "Track, budget, and understand the cost of your AI API calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Small Dream Collective" }
]
keywords = ["ai", "llm", "cost", "tokens", "budget", "openai", "anthropic", "claude", "gpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/smalldreamcollective/tokenmeter"
Repository = "https://github.com/smalldreamcollective/tokenmeter"
Issues = "https://github.com/smalldreamcollective/tokenmeter/issues"

[project.scripts]
tokenmeter = "tokenmeter.cli:cli"

[project.optional-dependencies]
cli = ["click>=8.1.0"]
openai = ["tiktoken>=0.7.0"]
anthropic = ["anthropic>=0.40.0"]
tui = ["textual>=0.60.0", "plotext>=5.2.0"]
all = ["click>=8.1.0", "tiktoken>=0.7.0", "anthropic>=0.40.0"]
dev = [
    "click>=8.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "textual>=0.60.0",
    "plotext>=5.2.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# textual and plotext ship no type stubs — ignore all tui/ modules
module = [
    "tokenmeter.tui",
    "tokenmeter.tui.*",
    "textual",
    "textual.*",
    "plotext",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
# Optional runtime dependencies — not installed in the type-checking environment
module = ["tiktoken", "anthropic", "openai"]
ignore_missing_imports = true
